--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "postcss": "^8.1.14"
     },
     "dependencies": {
+        "bootstrap-icons": "^1.8.1",
         "jquery-validation": "^1.19.3"
     }
 }
