--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
         "postcss": "^8.1.14"
     },
     "dependencies": {
+        "alert": "^5.0.10",
         "bootstrap-icons": "^1.8.1",
-        "jquery-validation": "^1.19.3"
+        "jquery-validation": "^1.19.3",
+        "sweat": "^0.4.0",
+        "sweetalert": "^2.1.2"
     }
 }
