--- a/php.ini
+++ b/php.ini
@@ -846,11 +846,11 @@ file_uploads=On
 ; Temporary directory for HTTP uploaded files (will use system default if not
 ; specified).
 ; http://php.net/upload-tmp-dir
-upload_tmp_dir="C:\Program Files\tmp"
+upload_tmp_dir="C:\Program Files\php\tmp"
 
 ; Maximum allowed size for uploaded files.
 ; http://php.net/upload-max-filesize
-upload_max_filesize=40M
+upload_max_filesize=4000M
 
 ; Maximum number of files that can be uploaded via a single request
 max_file_uploads=20
@@ -939,9 +939,9 @@ extension=mysqli
 extension=pdo_mysql
 ;extension=pdo_oci
 ;extension=pdo_odbc
-extension=pdo_pgsql
+;extension=pdo_pgsql
 extension=pdo_sqlite
-extension=pgsql
+;extension=pgsql
 ;extension=shmop
 
 ; The MIBS data available in the PHP distribution must be installed.
