--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "laravel/tinker": "^2.5",
         "maatwebsite/excel": "^3.1",
         "mpdf/mpdf": "^8.1",
+        "phpoffice/phpword": "^1.1",
         "riskihajar/terbilang": "^1.2"
     },
     "require-dev": {
